@@ -1035,6 +1035,26 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|io
+operator|.
+name|hfile
+operator|.
+name|LruBlockCache
+operator|.
+name|CacheStats
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|ipc
 operator|.
 name|CoprocessorProtocol
@@ -6446,6 +6466,56 @@ argument_list|(
 name|lruBlockCache
 operator|.
 name|getCurrentSize
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|CacheStats
+name|cacheStats
+init|=
+name|lruBlockCache
+operator|.
+name|getStats
+argument_list|()
+decl_stmt|;
+name|this
+operator|.
+name|metrics
+operator|.
+name|blockCacheHitCount
+operator|.
+name|set
+argument_list|(
+name|cacheStats
+operator|.
+name|getHitCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|metrics
+operator|.
+name|blockCacheMissCount
+operator|.
+name|set
+argument_list|(
+name|cacheStats
+operator|.
+name|getMissCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|metrics
+operator|.
+name|blockCacheEvictedCount
+operator|.
+name|set
+argument_list|(
+name|lruBlockCache
+operator|.
+name|getEvictedCount
 argument_list|()
 argument_list|)
 expr_stmt|;
