@@ -511,6 +511,48 @@ argument_list|,
 name|registry
 argument_list|)
 decl_stmt|;
+comment|/**    * Block cache hit count.    */
+specifier|public
+specifier|final
+name|MetricsLongValue
+name|blockCacheHitCount
+init|=
+operator|new
+name|MetricsLongValue
+argument_list|(
+literal|"blockCacheHitCount"
+argument_list|,
+name|registry
+argument_list|)
+decl_stmt|;
+comment|/**    * Block cache miss count.    */
+specifier|public
+specifier|final
+name|MetricsLongValue
+name|blockCacheMissCount
+init|=
+operator|new
+name|MetricsLongValue
+argument_list|(
+literal|"blockCacheMissCount"
+argument_list|,
+name|registry
+argument_list|)
+decl_stmt|;
+comment|/**    * Block cache evict count.    */
+specifier|public
+specifier|final
+name|MetricsLongValue
+name|blockCacheEvictedCount
+init|=
+operator|new
+name|MetricsLongValue
+argument_list|(
+literal|"blockCacheEvictedCount"
+argument_list|,
+name|registry
+argument_list|)
+decl_stmt|;
 comment|/**    * Block hit ratio.    */
 specifier|public
 specifier|final
@@ -1069,6 +1111,39 @@ expr_stmt|;
 name|this
 operator|.
 name|blockCacheCount
+operator|.
+name|pushMetric
+argument_list|(
+name|this
+operator|.
+name|metricsRecord
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|blockCacheHitCount
+operator|.
+name|pushMetric
+argument_list|(
+name|this
+operator|.
+name|metricsRecord
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|blockCacheMissCount
+operator|.
+name|pushMetric
+argument_list|(
+name|this
+operator|.
+name|metricsRecord
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|blockCacheEvictedCount
 operator|.
 name|pushMetric
 argument_list|(
@@ -1830,6 +1905,90 @@ argument_list|(
 name|this
 operator|.
 name|blockCacheCount
+operator|.
+name|get
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|sb
+operator|=
+name|Strings
+operator|.
+name|appendKeyValue
+argument_list|(
+name|sb
+argument_list|,
+name|this
+operator|.
+name|blockCacheHitCount
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|Long
+operator|.
+name|valueOf
+argument_list|(
+name|this
+operator|.
+name|blockCacheHitCount
+operator|.
+name|get
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|sb
+operator|=
+name|Strings
+operator|.
+name|appendKeyValue
+argument_list|(
+name|sb
+argument_list|,
+name|this
+operator|.
+name|blockCacheMissCount
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|Long
+operator|.
+name|valueOf
+argument_list|(
+name|this
+operator|.
+name|blockCacheMissCount
+operator|.
+name|get
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|sb
+operator|=
+name|Strings
+operator|.
+name|appendKeyValue
+argument_list|(
+name|sb
+argument_list|,
+name|this
+operator|.
+name|blockCacheEvictedCount
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+name|Long
+operator|.
+name|valueOf
+argument_list|(
+name|this
+operator|.
+name|blockCacheEvictedCount
 operator|.
 name|get
 argument_list|()
